<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MWM State: "
            android:layout_weight=".5"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disconnected"
            android:gravity="center"
            android:layout_weight=".5"
            android:id="@+id/tvState0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Attention: "
            android:layout_weight=".5"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="--"
            android:layout_weight=".5"
            android:id="@+id/tvAttentionLvl0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:weightSum="1"
        android:id="@+id/signalLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Signal Quality: "
            android:layout_weight=".5"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GOOD"
            android:gravity="center"
            android:layout_weight=".5"
            android:id="@+id/tvSignalQ0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Blink Strength: "
            android:layout_weight=".5"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="--"
            android:gravity="center"
            android:layout_weight=".5"
            android:id="@+id/tvBlinkStrength0"/>
    </LinearLayout>

    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:id="@+id/imgUP"
            android:src="@drawable/ic_arrow_up"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:id="@+id/imgDown"
            android:src="@drawable/ic_arrow_down"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:id="@+id/imgLeft"
            android:src="@drawable/ic_arrow_left"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:id="@+id/imgRight"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connectCar"
            android:id="@+id/btnConnectCar0"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connectMWM"
            android:id="@+id/btnConnectMWM0"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/carNotConnectedHint"
            android:textColor="#F00"
            android:layout_weight="1"
            android:gravity="start"
            android:id="@+id/briefCarConnection"/>
        <TextView
            android:paddingLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mwmNotConnectedHint"
            android:textColor="#F00"
            android:layout_weight="1"
            android:gravity="start"
            android:id="@+id/briefMWMConnection"/>
    </LinearLayout>
</LinearLayout>